# Simple_Streamlit_RAG

./: README.md  doc_processing.py  llm_generate.py  llm_response.py  main.py  pyproject.toml  requirement.txt  sample.py
src/: doc_processing.py  utils.py
styles/: message_styles.py
