[project]
name = "simple-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-ollama>=0.3.8",
    "ollama>=0.6.0",
    "openai>=1.109.1",
    "python-dotenv>=1.1.1",
    "streamlit>=1.50.0",
]
